<resources>
    <string name="app_name">Comparador</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">one</string>
    <string name="two">Two</string>
    <string name="txtBoton">Comparar precios</string>
    <string name="txtCodigo">Código de Barras</string>
    <string name="instrucciones">Inserta o escanea el código de barras del producto</string>
    <string name="txtGuardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="regresar">regresar</string>
</resources>
