<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.enya.comparador.OneFragment"
    android:background="@color/windowBackground">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:contentDescription="@string/txtCodigo"
        android:src="@drawable/photocamera"
        android:background="@drawable/boton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignBottom="@+id/codigo"
        android:layout_alignTop="@+id/codigo"
        android:layout_margin="5dp"
        android:layout_gravity="right" />

    <TextView
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instrucciones"
        android:id="@+id/instrucciones"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/codigo"
        android:hint="@string/txtCodigo"
        android:layout_below="@+id/instrucciones"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_toLeftOf="@+id/imageButton"
        android:layout_toStartOf="@+id/imageButton" />

    <Button
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBoton"
        android:id="@+id/verificar"
        android:layout_below="@+id/codigo"
        android:textColor="#FFF"
        android:background="@drawable/boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGuardar"
        android:id="@+id/guardar"
        android:textColor="#FFF"
        android:background="@drawable/boton"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/verificar"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Nombre del Producto"
        android:id="@+id/NombreProducto"
        android:textSize="20sp"
        android:layout_below="@+id/guardar"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultados"
        android:layout_below="@+id/NombreProducto"
        android:layout_alignStart="@+id/NombreProducto" />

</RelativeLayout>
